# Assetly

./: .gitignore  README.md  bump-version.sh  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
.qoder/repowiki/zh/content/: 快速开始.md  故障排除.md  移动端优化.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/charts/: AreaChart.tsx  Chart.tsx  PieChart.tsx
src/components/items/: ItemCard.tsx  LocationPicker.tsx
src/components/layout/: AppShell.tsx
src/components/medicine/: ExpiryBadge.tsx  MedicineCard.tsx
src/components/shared/: AIRecognizeDialog.tsx  ConfirmDialog.tsx  CustomSelect.tsx  DatePicker.tsx  EmojiPicker.tsx  EmptyState.tsx  SearchBar.tsx  TimePicker.tsx
src/routes/: Categories.tsx  Dashboard.tsx  ItemDetail.tsx  ItemForm.tsx  ItemList.tsx  Locations.tsx  Logs.tsx  MedicineBox.tsx  MedicineForm.tsx  Settings.tsx  Statistics.tsx
src/services/: aiService.ts  categoryService.ts  database.ts  exportService.ts  httpFetch.ts  itemService.ts  locationService.ts  medicationReminder.ts  medicineService.ts  statisticsService.ts  webdavService.ts
src/stores/: useCategoryStore.ts  useDashboardStore.ts  useItemStore.ts  useLocationStore.ts  useMedicineStore.ts  useSettingsStore.ts
src/types/: category.ts  item.ts  location.ts  medicine.ts  settings.ts
src/utils/: constants.ts  currencyHelper.ts  dateHelper.ts  logger.ts
(+86 files in other folders)
