[package]
name = "assetly"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "assetly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# 开启 devtools feature，确保 release/移动端构建也能使用 WebView DevTools（查看 Network 请求）
# 参考：https://v2.tauri.app/zh-cn/develop/debug/application/
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-log = "2.8.0"
tauri-plugin-http = "2"
log = "0.4.29"
# AI SSE 流式请求依赖：tauri-plugin-http 的 fetch 会缓冲整个 body，
# 为支持真正的流式 SSE，在 Rust 侧自己用 reqwest stream + Tauri Channel 实现。
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls"] }
futures-util = "0.3"

